# HydrakonSimV2

./: .gitattributes  .gitignore  .gitmodules  Hydraconnect.md  README.md  my_track_map.yaml  my_track_path.csv  track_waypoints.yaml
.github/workflows/: colcon_build_ci.yaml
CAD/: FINAL PLATE METAL.dxf  Hydrakon Plate (to work) v28.f3z  INS (to work) v5.f3d  Jetson case step (to work) v13.f3z  Lidar case step (to work) v8.f3d  Router holder (to work) v5.f3d  ZED2i (to work) v9.f3d  anker (to work) v7.f3d  misc box (to work) v7.f3d  plate (to work) v5.f3d  plate (to work) v5.step  plate (to work) v5.stl
documentation/: LICENSE.txt  README.md  quartz.config.ts  quartz.layout.ts
documentation/.github/workflows/: deploy.yml
documentation/content/: getting-started.md  hydraconnect.md  index.md  installation.md  prerequisites.md  troubleshooting.md  urdf.md
documentation/content/controllers/: index.md  pure_pursuit.md
documentation/content/launch/: hydrakon_launch.md  index.md  node_connections.md  topics.md
documentation/content/management/: head.md  index.md  team_principal.md
documentation/content/mapping/: index.md  nav2_architecture.md
src/hydrakon_camera/: package.xml  setup.cfg  setup.py
src/hydrakon_camera/hydrakon_camera/: YOLO _ONNX(NU).py  YOLO.py  camera.py  cone_locator.py  depth_anything.py  depth_camera.py
src/hydrakon_description/: CMakeLists.txt  package.xml
src/hydrakon_launch/: package.xml  setup.py
src/hydrakon_manager/: package.xml  setup.cfg  setup.py
src/r2s_gw/: README.md  requirements.txt  setup.py
src/r2s_gw/r2s_gw/: ui.py  (+1 more)
(+30 files in other folders)
