<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydrakon_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="as2397@hw.ac.uk">Aditya S</maintainer>
  <license>Singular Folder for handling all camera related tasks</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
